<resources>
    <string name="app_name">finalProject</string>
    <string name="strLogin">Login</string>
    <string name="strEmail">Email</string>
    <string name="strPassword">Password</string>
    <string name="title_activity_login">Login</string>
    <string name="strRegisterbtn">Create an Account</string>
    <string name="strName">Name</string>
    <string name="strPhone">Phone</string>
    <string name="strEmailPlaceHolder">Email</string>
    <string name="strPasswordPlaceHolder">Password</string>
    <string name="strDOB">Date of Birth</string>
    <string name="strRegister">Register</string>
    <string name="title_activity_home" translatable="false">Tour Buddy</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_launcher" translatable="false">Tour Buddy</string>
    <string name="title_activity_Register">Register</string>
    <string name="strSubmit">Submit</string>
    <string name="strFeedBackMessage">Write in here your FeedBack message.</string>
    <string name="strSubject">Subject</string>
    <string name="strUpdate">Update</string>
    <string name="title_activity_ranked">Best Places by Ranking</string>
    <string name="title_activity_support">Support</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_search_place">Search Place</string>
    <string name="title_activity_favorites">Favorite Places</string>
    <string name="strFeedBackTitle">FeedBack Title</string>
    <string name="strFavoritesEmpty">The favorite list is empty.</string>
    <string name="strAddedFavorite">Added to Favorites</string>
    <string name="strRemovedFavorite">Removed from Favorites</string>
    <string name="strPlaceRated">Place Rated.</string>
    <string name="strRatedBy">Rated by</string>
    <string name="strUsers">users</string>
    <string name="strCountry">Country</string>
    <string name="strCity">City</string>
    <string name="strLogOut">Log Out</string>
    <string name="strSometingWentWrong">Someting went wrong</string>
    <string name="strLoginSucessful">Login Sucessful</string>
    <string name="strInvalidEmailOrPassword">Invalid Email/Password</string>
    <string name="strFieldsMustBeFilled">The fields must be filled.</string>
    <string name="strYourProfileWasUpdated">Your profile was updated.</string>
    <string name="strEnterValidEmail">Enter a valid email address.</string>
    <string name="strEmailAlreadyExists">Already exists a user with that email.</string>
    <string name="strSupportEmail">Support Email</string>
    <string name="strSupportBodyMessage">This is my support message. Thank you</string>
    <string name="strSelectEmailAccount">Select email account</string>
    <string name="strSMSBodyMessage">This is a support message by SMS</string>
    <string name="strSMSPermissionDenied">SMS Permission Denied</string>
    <string name="strCallPermissionDenied">Call Permission Denied</string>
    <string name="strFeedBackSended">FeedBack Sended</string>
    <string name="strPlaceName">Place Name</string>
    <string name="strDescriptionTitle">Place Description:</string>
    <string name="strDescription">Description</string>
    <string name="strVideoTitle">See what is wainting for you</string>
    <string name="strRateThisPlace">Rate This Place</string>
    <string name="strRateIt">Rate It</string>
    <string name="strSelectCountry">Select Country</string>
    <string name="strSelectCity">Select City</string>
    <string name="strGiveUsFeedBack">Give Us Your FeedBack</string>
    <string name="strSendEmail">Send Email</string>
    <string name="strSendSMS">Send SMS</string>
    <string name="strCall">Call</string>
    <string name="strSelectSupportMethod">Please select how you want to contact us.</string>
    <string name="strSupportInfo">Thank you for contacting our Support System. This System is online 24/7.</string>
    <string name="strSantosh" translatable="false">Santosh Tekulapally (738169)</string>
    <string name="strShashank" translatable="false">Shashank Machani (738286)</string>
    <string name="strJoao">Joao Rebelo (706998)</string>
    <string name="strProjectDevelopers">Project Developers:</string>
    <string name="strEnjoy">Enjoy our app and give us your FeedBack.</string>
    <string name="strAppDesc">This application was developed as a group project for the subject Android Development Fundamentals of the course MADT, with the aim of let know monuments / places of interest in certain cities of certain countries.</string>
    <string name="strWelcomeToTourBuddy">Welcome To TourBuddy</string>
    <string name="strLanguage_setting">Change Language</string>
    <string name="strSelectLanguage">Select Language</string>
    <string name="strBestPlacesByRanking">Best Places by Ranking</string>
    <string name="strFavoritePlaces">Favorite Places</string>
    <string name="strSearchPlace">Search Place</string>
    <string name="strCommunicate">Communicate</string>
    <string name="strProfile">Profile</string>
    <string name="strSupport">Support</string>
    <string name="strLogOutMenu">Logout</string>

    <!-- Language select dialog -->
    <string-array name="lang_select">
        <item>English</item>
        <item>Portuguese</item>
    </string-array>
    <string name="strAccountCreated">Account Created.</string>
</resources>
