<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context=".SupportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtSupportTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSupportInfo"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAlignment="center"
                />
            <TextView
                android:id="@+id/txtSupportTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/strSelectSupportMethod"
                android:textSize="15sp"
                android:textAlignment="center"
                />

            <Button
                android:id="@+id/btnCall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strCall" />

            <Button
                android:id="@+id/btnSMS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSendSMS" />

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/strSendEmail" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            >

            <TextView
                android:id="@+id/txtFeedBackTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:text="@string/strGiveUsFeedBack" />

            <EditText
                android:id="@+id/edtSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/txtFeedBackTitle"
                android:hint="@string/strFeedBackTitle"
                android:inputType="text" />

            <EditText
                android:id="@+id/edtText"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/edtSubject"
                android:hint="@string/strFeedBackMessage"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/edtText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:text="@string/strSubmit" />
        </RelativeLayout>

    </LinearLayout>
</ScrollView>