<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeActivity"
    tools:showIn="@layout/app_bar_home">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strWelcomeToTourBuddy"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textSize="24sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txtAppDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtWelcome"
            android:text="@string/strAppDesc"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/txtIncentive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtAppDesc"
            android:text="@string/strEnjoy"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txtDevelopers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtIncentive"
            android:text="@string/strProjectDevelopers"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txtJoao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDevelopers"
            android:text="@string/strJoao"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/txtShashank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJoao"
            android:text="@string/strShashank"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/txtSantosh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtShashank"
            android:text="@string/strSantosh"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            />
    </RelativeLayout>
</LinearLayout>